kube/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: movie-search-backend
  namespace: bryce-final
spec:
  replicas: 1
  selector:
    matchLabels:
      app: movie-search-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: movie-search-backend
    spec:
      containers:
      - name: movie-search-backend
        image: brycecoon/msearchbackend:${IMAGE_TAG}
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /api/healthy
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 3
        livenessProbe:
          httpGet:
            path: /api/healthy
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 20
