kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: movie-search-backend-service
  namespace: bryce-final
spec:
  selector:
    app: movie-search-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  type: ClusterIP
