kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movie-search-backend-ingress
  namespace: bryce-final
spec:
  rules:
  - host: moviesearch.duckdns.org
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: movie-search-backend-service
            port:
              number: 8080
